# panda-playground

./: README.md  pubspec.yaml
.claude/: ship-initialized
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/org/p2panda/panda_playground/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  sketch_screen.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: chat.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  node.rs
rust/src/api/: chat.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_panda_playground.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_panda_playground.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
