[package]
name = "rust_lib_panda_playground"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = "1.0"
flutter_rust_bridge = "=2.12.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2.2"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio-stream = "0.1"
hex = "0.4"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# p2panda modular crates
p2panda-core = { git = "https://github.com/p2panda/p2panda", rev = "a1308c116c1bd345f2cd6af7df41d2a6e0a4a682" }
p2panda-discovery = { git = "https://github.com/p2panda/p2panda", rev = "a1308c116c1bd345f2cd6af7df41d2a6e0a4a682" }
p2panda-net = { git = "https://github.com/p2panda/p2panda", rev = "a1308c116c1bd345f2cd6af7df41d2a6e0a4a682" }
p2panda-store = { git = "https://github.com/p2panda/p2panda", rev = "a1308c116c1bd345f2cd6af7df41d2a6e0a4a682", features = ["sqlite"], default-features = false }
p2panda-stream = { git = "https://github.com/p2panda/p2panda", rev = "a1308c116c1bd345f2cd6af7df41d2a6e0a4a682" }
p2panda-sync = { git = "https://github.com/p2panda/p2panda", rev = "a1308c116c1bd345f2cd6af7df41d2a6e0a4a682" }

# Platform-specific logging
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2"

# Local p2panda patch for mDNS fix
[patch."https://github.com/p2panda/p2panda"]
p2panda-core = { path = "/Users/nick/git/experiments/p2panda-local/p2panda-core" }
p2panda-discovery = { path = "/Users/nick/git/experiments/p2panda-local/p2panda-discovery" }
p2panda-net = { path = "/Users/nick/git/experiments/p2panda-local/p2panda-net" }
p2panda-store = { path = "/Users/nick/git/experiments/p2panda-local/p2panda-store" }
p2panda-stream = { path = "/Users/nick/git/experiments/p2panda-local/p2panda-stream" }
p2panda-sync = { path = "/Users/nick/git/experiments/p2panda-local/p2panda-sync" }
